--- a/landing.css
+++ b/landing.css
@@ -325,3 +325,87 @@ table {
   margin-bottom: 36px;
   margin-left: 30px;
 }
+
+@media (max-width: 600px) {
+  .nav_container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav_container .nav_div {
+    display: flex;
+    flex-direction: row;
+    padding-left: 100px;
+  }
+
+  .buy_button {
+    margin-left: 0;
+  }
+  .hero_content_title p {
+    font-size: 30px;
+    line-height: 50px;
+  }
+
+  .hero_content_body {
+    color: #505f98;
+    line-height: 24px;
+    font-size: 12px;
+  }
+
+  .hero_section img {
+    width: 700.03px;
+    height: 801px;
+    left: 260px;
+  }
+  .landing_para {
+    margin-left: 10px;
+  }
+  .feature_section h2 {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  .first_section p {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .second_section_heading {
+    font-size: 13px;
+    line-height: 20px;
+  }
+  .second_section_para {
+    font-size: 10px;
+    line-height: 15px;
+  }
+
+  .footer_first_line {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin-left: 350px;
+  }
+  .text-copyright {
+    margin-top: 16px;
+  }
+  .footer_landing {
+    margin-top: 26px;
+  }
+  .footer_button {
+    margin-top: 28px;
+  }
+  .footer_nav_container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .footer_second li {
+    margin: 5px auto;
+  }
+
+  .feature_right_align {
+    position: absolute;
+    width: 340px;
+    left: 535px;
+  }
+}
